🐛 fix: 이미지 경로 수정 후 최종 반영

--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
   <main class="container">
     <section id="about" class="fade-in">
       <h2>소개</h2>
-      <p>단국대학교 성악 전공, 사이버보안 복수전공. 음악과 보안의 융합 가능성을 탐구하며, 클라우드 보안, 리버스 엔지니어링, 개인정보 보호에 관심이 많습니다.</p>
+      <img src="photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
+      <p>
+        단국대학교 성악 전공, 사이버보안 복수전공.  
+        음악과 보안의 융합 가능성을 탐구하며, 클라우드 보안, 리버스 엔지니어링,  
+        개인정보 보호에 관심이 많습니다.
+      </p>
     </section>
+    
+    
 
     <section id="projects" class="fade-in">
       <h2>프로젝트</h2>
