--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="container">
     <section id="about" class="fade-in">
       <h2>소개</h2>
-      <img src="photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
+      <img src="/portfolio/photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
       <p>
         단국대학교 성악 전공, 사이버보안 복수전공.  
         음악과 보안의 융합 가능성을 탐구하며, 클라우드 보안, 리버스 엔지니어링,  
