--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>소개</h2>
       <img src="/portfolio/photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
       <p>
-        단국대학교 성악 전공, 사이버보안 복수전공 
+        단국대학교 성악 전공, 사이버보안 복수전공 <br /> 
         유튜브 "Victenor" 운영 중
       </p>
     </section>
