--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
 
   <header class="hero fade-in">
-    <h1>성악가전공자이자 사이버보안 전공자</h1>
+    <h1>성악 전공자이자 사이버보안 전공자</h1>
     <p>예술과 기술을 합치다</p>
   </header>
 
