--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section id="projects" class="fade-in">
       <h2 data-key="projects">프로젝트</h2>
       <ul>
-        <li><strong data-key="report-title">클라우드 보안 보고서</strong> – PDF 미리보기:</li>
+        <li><strong data-key="report-title">클라우드 보안 보고서</li>
       </ul>
       <iframe src="report.pdf" width="100%" height="400px" frameborder="0"></iframe>
     </section>
