--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>정현범 | 포트폴리오</title>
-
-  <script>
-    const isMobile = /iPhone|Android|iPad|iPod|Mobile/i.test(navigator.userAgent);
-    if (isMobile) {
-      window.location.replace("./mobile/index.html");
-    }
-  </script>
-  
-  <meta name="description" content="성악과 전공과 사이버보안 복수전공을 융합한 정현범의 포트폴리오입니다.">
-  <link rel="stylesheet" href="style.css" />
+  <title>정현범 | 모바일 포트폴리오</title>
+  <link rel="stylesheet" href="../style.css" />
   <style>
-    [data-key] {
-      transition: opacity 0.3s ease;
+    body {
+      font-size: 15px;
     }
-    .lang-fade {
-      opacity: 0;
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .nav-links {
+      flex-direction: column;
+      gap: 0.8rem;
+    }
+    .container {
+      padding: 1rem;
+    }
+    .profile-photo {
+      width: 100%;
+      max-width: 280px;
+    }
+    iframe {
+      height: 300px;
     }
   </style>
 </head>
@@ -33,11 +39,11 @@
       <a href="#skills" data-key="skills">기술</a>
       <a href="#contact" data-key="contact">연락처</a>
       <button id="toggle-mode">🌙</button>
-      <img src="kr.png" id="to-ko" alt="한국어" title="한국어" style="width: 25px; cursor: pointer; display: none;">
-      <img src="us.png" id="to-en" alt="English" title="English" style="width: 25px; cursor: pointer;">
+      <img src="../kr.png" id="to-ko" alt="한국어" title="한국어" style="width: 25px; cursor: pointer; display: none;">
+      <img src="../us.png" id="to-en" alt="English" title="English" style="width: 25px; cursor: pointer;">
     </div>
   </nav>
-  
+
   <header class="hero fade-in">
     <h1 data-key="title">성악 전공자이자 사이버보안 전공자</h1>
     <p data-key="desc">예술과 기술을 합치다</p>
@@ -46,7 +52,7 @@
   <main class="container">
     <section id="about" class="fade-in">
       <h2 data-key="about">소개</h2>
-      <img src="/portfolio/photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
+      <img src="../portfolio/photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
       <p data-key="intro-text">
         단국대학교 성악 전공, 사이버보안 복수전공 <br /> 
         유튜브 "Victenor" 운영 중
@@ -57,8 +63,7 @@
       <h2 data-key="youtube">유튜브 영상</h2>
       <div class="video-wrapper">
         <iframe 
-          width="560" 
-          height="315" 
+          width="100%" 
           src="https://www.youtube.com/embed/97SC9MZAFYA" 
           title="YouTube video player" 
           frameborder="0" 
@@ -73,7 +78,7 @@
       <ul>
         <li><strong data-key="report-title">클라우드 보안 보고서</strong> <strong>PDF</strong></li>
       </ul>
-      <iframe src="report.pdf" width="100%" height="400px" frameborder="0"></iframe>
+      <iframe src="../report.pdf" width="100%" height="400px" frameborder="0"></iframe>
     </section>
 
     <section id="skills" class="fade-in">
@@ -92,13 +97,11 @@
     © 2025 정현범
   </footer>
 
-  <!-- 기존 스크립트 (다크모드 + 애니메이션) -->
   <script>
     const btn = document.getElementById('toggle-mode');
     if (localStorage.getItem('mode') === 'light') {
       document.body.classList.add('light');
     }
-
     btn.addEventListener('click', () => {
       document.body.classList.toggle('light');
       localStorage.setItem('mode', document.body.classList.contains('light') ? 'light' : 'dark');
@@ -112,9 +115,6 @@
     }, { threshold: 0.1 });
     fadeEls.forEach(el => observer.observe(el));
   </script>
-
-  <!-- 언어 전환 기능 -->
-  <script src="lang.js"></script>
-
+  <script src="../lang.js"></script>
 </body>
 </html>
