--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="style_final.css" />
+
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>정현범 | 모바일 포트폴리오</title>
-  <link rel="stylesheet" href="../style.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>정현범 | 모바일 포트폴리오</title>
+    <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-size: 15px;
