--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <main class="container">
     <section id="about" class="fade-in">
       <h2 data-key="about">소개</h2>
-      <img src="../portfolio/photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
+      <img src="photo.jpg" alt="정현범 프로필 사진" class="profile-photo" />
       <p data-key="intro-text">
         단국대학교 성악 전공, 사이버보안 복수전공 <br /> 
         유튜브 "Victenor" 운영 중
@@ -148,7 +148,7 @@
     <section id="projects" class="fade-in">
       <h2 data-key="projects">프로젝트</h2>
       <ul>
-        <li><strong data-key="report-title">클라우드 보안 보고서</strong> - <a href="../report.pdf" download data-key="pdf-download">PDF 다운로드</a></li>
+        <li><strong data-key="report-title">클라우드 보안 보고서</strong> - <a href="report.pdf" download data-key="pdf-download">PDF 다운로드</a></li>
         <li><strong>JLPT 단어장 앱</strong> - <a href="https://github.com/32204232/JLPT" target="_blank" data-key="github-view">GitHub 보기</a></li>
       </ul>
     </section>
@@ -169,7 +169,7 @@
     © 2025 정현범
   </footer>
 
-  <script src="../lang.js"></script>
+  <script src="lang.js"></script>
   <script>
     const modeBtn = document.getElementById('toggle-mode');
     const langBtn = document.getElementById('lang-toggle');
